동작 상태 확인 완료